--- a/Web/index.html
+++ b/Web/index.html
@@ -40,7 +40,8 @@
             </div>
             <div class="solution" id="solstate">
                 <div class="input-text">
-                    <input type="text" placeholder="Enter the String" id="ipstring" />
+                    <!-- <input type="text" placeholder="Enter the String" id="ipstring" /> -->
+                    <input id="partitioned" type="text" maxlength="4" />
                 </div>
                 <div class="main">
                     <div class="moore-machine">
