--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta charset='UTF-8'>
     <meta http-equiv='X-UA-Compatible' content='E=edge'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <link rel="icon" type="image/ico" href="favicon.ico" />
     <link href='main.css' rel='stylesheet'>
     <link href='gear-animate.css' rel='stylesheet'>
     <link href='states.css' rel='stylesheet'>
-    <title></title>
+    <title>Moore Machine</title>
 </head>
 
 <body>
