--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
     <link href='main.css' rel='stylesheet'>
     <link href='gear-animate.css' rel='stylesheet'>
     <link href='states.css' rel='stylesheet'>
-    <title>Moore Machine</title>
+    <title>Moore Machine: Program to constrct Moore Machine for generating output 1 if an input of binary sequence 1 is
+        preceded with exactly two zero's.</title>
+    <meta name="description"
+        content="Program to constrct Moore Machine for generating output 1 if an input of binary sequence 1 is preceded with exactly two zero's.">
 </head>
 
 <body>
@@ -49,6 +52,7 @@
                 </div>
             </div>
             <div class="title">
+                <h1 style="display: none;">Moore Machine</h1>
                 <div class="heading" id="lgstate">
                     <p class="heading-M">M</p>
                     <p class="gear-rotate"></p>
