--- a/index.html
+++ b/index.html
@@ -75,33 +75,83 @@
                     </div>
                 </div>
                 <div class="main">
-                    <div class="moore-machine">
-                        <div class="states">
-                            <div class="arrow left">
-                                <div class="txt">Start</div>
-                                <div class="line"></div>
-                                <div class="point"></div>
-                            </div>
-                            <div id="q1" class="q1 badge">
-                                <sup>q</sup>1<sub>/<sub>^</sub></sub>
-                            </div>
-                            <div id="q5-com" class="col">
-                                <div id="q2" class="q2 badge">
-                                    <sup>q</sup>2<sub>/<sub>0</sub></sub>
+                    <div class="run-moore">
+                        <div class="moore-machine">
+                            <div class="states">
+                                <div class="arrow left">
+                                    <div class="txt">Start</div>
+                                    <div class="line"></div>
+                                    <div class="point"></div>
                                 </div>
-                                <div id="q5" class="q5 badge">
-                                    <sup>q</sup>5<sub>/<sub>0</sub></sub>
+                                <div id="q1" class="q1 badge">
+                                    <sup>q</sup>1<sub>/<sub>^</sub></sub>
                                 </div>
-                            </div>
-                            <div id="q3" class="q3 badge">
-                                <sup>q</sup>3<sub>/<sub>0</sub></sub>
-                            </div>
-                            <div id="q4" class="q4 badge">
-                                <sup>q</sup>4<sub>/<sub>1</sub></sub>
+                                <div id="q5-com" class="col">
+                                    <div id="q2" class="q2 badge">
+                                        <sup>q</sup>2<sub>/<sub>0</sub></sub>
+                                    </div>
+                                    <div id="q5" class="q5 badge">
+                                        <sup>q</sup>5<sub>/<sub>0</sub></sub>
+                                    </div>
+                                </div>
+                                <div id="q3" class="q3 badge">
+                                    <sup>q</sup>3<sub>/<sub>0</sub></sub>
+                                </div>
+                                <div id="q4" class="q4 badge">
+                                    <sup>q</sup>4<sub>/<sub>1</sub></sub>
+                                </div>
                             </div>
                         </div>
+                        <div id="moore-output" class="moore-output">OUTPUT</div>
                     </div>
-                    <div id="moore-output" class="moore-output">OUTPUT</div>
+                    <div class="transition-table">
+                        <h2>Transition Table:</h2>
+                        <table>
+                            <thead>
+                                <tr>
+                                    <th rowspan="2">Present State</th>
+                                    <th colspan="2">Next State</th>
+                                    <th rowspan="2">Output</th>
+                                </tr>
+                                <tr>
+                                    <th>i/p = 0</th>
+                                    <th>i/p = 1</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>q<sub>1</sub></td>
+                                    <td>q2</td>
+                                    <td>q5</td>
+                                    <td>^</td>
+                                </tr>
+                                <tr>
+                                    <td>q<sub>2</sub></td>
+                                    <td>q3</td>
+                                    <td>q5</td>
+                                    <td>0</td>
+                                </tr>
+                                <tr>
+                                    <td>q<sub>3</sub></td>
+                                    <td>q5</td>
+                                    <td>q4</td>
+                                    <td>0</td>
+                                </tr>
+                                <tr>
+                                    <td>q<sub>4</sub></td>
+                                    <td>q2</td>
+                                    <td>q5</td>
+                                    <td>1</td>
+                                </tr>
+                                <tr>
+                                    <td>q<sub>5</sub></td>
+                                    <td>q2</td>
+                                    <td>q5</td>
+                                    <td>0</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
             </div>
         </div>
