--- a/index.html
+++ b/index.html
@@ -2,27 +2,28 @@
 <html lang='en' xmlns:og="http://ogp.me/ns#">
 
 <head>
-    <meta property="og:title" content="Moore Machine">
-    <meta property="og:site_name" content="Moore Machine">
+    <meta property="og:title" content="Moore Machine" />
+    <meta property="og:site_name" content="Moore Machine" />
     <meta property="og:url"
-        content=https://t-em.github.io/Moore-Machine-for-generating-output-1-with-binary-sequence-001 />
+        content="https://t-em.github.io/Moore-Machine-for-generating-output-1-with-binary-sequence-001" />
     <meta property="og:description"
-        content="Program to constrct Moore Machine for generating output 1 if an input of binary sequence 1 is preceded with exactly two zero's.">
-    <meta property="og:type" content=website>
+        content="Program to constrct Moore Machine for generating output 1 if an input of binary sequence 1 is preceded with exactly two zero's." />
+    <meta property="og:type" content="website" />
     <meta property="og:image"
-        content=https://t-em.github.io/Moore-Machine-for-generating-output-1-with-binary-sequence-001/icons8-engineering-dotted-96.png>
+        content="https://t-em.github.io/Moore-Machine-for-generating-output-1-with-binary-sequence-001/icons8-engineering-dotted-96.png" />
 
-    <meta charset='UTF-8'>
-    <meta http-equiv='X-UA-Compatible' content='E=edge'>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <meta charset='UTF-8' />
+    <meta http-equiv='X-UA-Compatible' content='E=edge' />
+    <meta name='viewport' content='width=device-width, initial-scale=1' />
     <link rel="icon" type="image/ico" href="favicon.ico" />
-    <link href='main.css' rel='stylesheet'>
-    <link href='gear-animate.css' rel='stylesheet'>
-    <link href='states.css' rel='stylesheet'>
+    <link href='main.css' rel='stylesheet' />
+    <link href='gear-animate.css' rel='stylesheet' />
+    <link href='states.css' rel='stylesheet' />
     <title>Moore Machine: Program to constrct Moore Machine for generating output 1 if an input of binary sequence 1 is
         preceded with exactly two zero's.</title>
     <meta name="description"
-        content="Program to constrct Moore Machine for generating output 1 if an input of binary sequence 1 is preceded with exactly two zero's.">
+        content="Program to constrct Moore Machine for generating output 1 if an input of binary sequence 1 is preceded with exactly two zero's." />
+    <meta name="google-site-verification" content="ZCr_tRruaQ3k8bb6iqn7u7BIzUMZectE-kJci4gp-I4" />
 </head>
 
 <body>
