--- a/index.html
+++ b/index.html
@@ -121,34 +121,34 @@
                             </thead>
                             <tbody>
                                 <tr>
-                                    <td>q<sub>1</sub></td>
-                                    <td>q2</td>
-                                    <td>q5</td>
-                                    <td>^</td>
+                                    <td id="qt1">q<sub>1</sub></td>
+                                    <td id="qt12">q2</td>
+                                    <td id="qt15">q5</td>
+                                    <td id="qt1">^</td>
                                 </tr>
                                 <tr>
-                                    <td>q<sub>2</sub></td>
-                                    <td>q3</td>
-                                    <td>q5</td>
-                                    <td>0</td>
+                                    <td id="qt2">q<sub>2</sub></td>
+                                    <td id="qt23">q3</td>
+                                    <td id="qt25">q5</td>
+                                    <td id="qt1">0</td>
                                 </tr>
                                 <tr>
-                                    <td>q<sub>3</sub></td>
-                                    <td>q5</td>
-                                    <td>q4</td>
-                                    <td>0</td>
+                                    <td id="qt3">q<sub>3</sub></td>
+                                    <td id="qt35">q5</td>
+                                    <td id="qt34">q4</td>
+                                    <td id="qt1">0</td>
                                 </tr>
                                 <tr>
-                                    <td>q<sub>4</sub></td>
-                                    <td>q2</td>
-                                    <td>q5</td>
-                                    <td>1</td>
+                                    <td id="qt4">q<sub>4</sub></td>
+                                    <td id="qt42">q2</td>
+                                    <td id="qt45">q5</td>
+                                    <td id="qt1">1</td>
                                 </tr>
                                 <tr>
-                                    <td>q<sub>5</sub></td>
-                                    <td>q2</td>
-                                    <td>q5</td>
-                                    <td>0</td>
+                                    <td id="qt5">q<sub>5</sub></td>
+                                    <td id="qt52">q2</td>
+                                    <td id="qt55">q5</td>
+                                    <td id="qt1">0</td>
                                 </tr>
                             </tbody>
                         </table>
