Added-for-accepting-and-rejecting-string

--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
 
 <body>
     <div class="container">
+        <div class="notify" id="notify">
+            <div class="content" id="notify-content">
+                The String is accepted!
+            </div>
+        </div>
         <div id="mySidenav" class="sidenav">
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
             <a onclick="home()">Content</a>
